--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
         "srmklive/paypal": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "jn-jairo/laravel-ngrok": "^3.0",
         "laravel/breeze": "^1.19",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
